2009-03-25	Nils Durner <ndurner@users.sourceforge.net>
	* added search functions (tsearch, lsearch, hsearch)

2009-01-29	Nils Durner <ndurner@users.sourceforge.net>
	* releasing 0.1.4

2008-08-17	Nils Durner <ndurner@users.sourceforge.net>
	* Vista compatibility
	* gethostbyname2()
	* various resolver functions
	* kill()
	* fix mkstemp()

2008-06-15	Nils Durner <ndurner@users.sourceforge.net>
	* plibc.ini can now override the parameters passed to plibc_init()

2006-01-12	Nils Durner	<ndurner@users.sourceforge.net>
	* plibc_conv_to_win_path(_ex)() no longer crashes if passed null pointers

2006-01-05  Nils Durner  <ndurner@users.sourceforge.net>
	* fstat() didn't work with pipes
	* support for "$HOME" in path names

2006-05-13	Nils Durner  <ndurner@users.sourceforge.net>
	* releasing 0.1.3

2006-05-08	Nils Durner  <ndurner@users.sourceforge.net>
  * strncasecmp(), strcasecmp

2006-04-18	Nils Durner  <ndurner@users.sourceforge.net>
	* stat64, lstat64

2006-12-03	Nils Durner  <ndurner@users.sourceforge.net>

	* support for locales in strptime
	* define MAP_FAILED
	* define EILSEQ and EOVERFLOW
	* strndup

2005-12-20  Nils Durner  <ndurner@users.sourceforge.net>

	* dereferencing symlinks/shortcuts always set errno = EINVAL
	* readlink() returned incorrect data sometimes

2005-09-04  Nils Durner  <ndurner@users.sourceforge.net>

	* Added check for ftruncate()
	* Fix symlink(): when overwriting an existing link, a link by the same name
	                 as the orginal file was created
	* Make header file compatible with gcc 2.95 (Unix)
	* Fix symlinks under Win9x
	* If newfile named a symlink, rename() didn't operate on the link itself
	* Symlink names were not expanded (dir/file -> dir\file.lnk)
	* Add support for "Open file" common dialog
	* fix mkstemp()
	* fix memory leak in symlink dereferencing

2005-07-08  Nils Durner  <ndurner@users.sourceforge.net>

	* releasing 0.1.0

2005-04-27  Nils Durner  <ndurner@users.sourceforge.net>

	* initial version.
