@@ -1,3 +1,7 @@
+2009-03-30	Nils Durner <ndurner@users.sourceforge.net>
+	* renamed ctime(), ctime_r(), gettimeofday() and search.h functions to
+	  _win_*()
+
 2009-03-25	Nils Durner <ndurner@users.sourceforge.net>
 	* added search functions (tsearch, lsearch, hsearch)
 
